[gd_scene load_steps=13 format=2]

[ext_resource path="res://TestLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Box.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://CloudBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD.gd" type="Script" id=6]
[ext_resource path="res://LevelOne.tscn" type="PackedScene" id=7]
[ext_resource path="res://LevelTwo.tscn" type="PackedScene" id=8]
[ext_resource path="res://AngryCloudBox.tscn" type="PackedScene" id=9]

[sub_resource type="StreamTexture" id=1]
resource_local_to_scene = true

[sub_resource type="Shader" id=2]

[sub_resource type="ShaderMaterial" id=3]
render_priority = 13
shader = SubResource( 2 )

[node name="Main" type="Node"]
script = ExtResource( 2 )
box = ExtResource( 3 )
cloudBox = ExtResource( 5 )
angryCloudBox = ExtResource( 9 )
levelsList = [ ExtResource( 1 ), ExtResource( 7 ), ExtResource( 8 ) ]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 75.2049, 408.576 )
PUSH_FACTOR = 0.05
num_box_power_left = [ 1, 1, 1 ]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="CurrentBoxDisplay" type="TextureRect" parent="HUD"]
margin_left = 920.0
margin_top = 14.0
margin_right = 1008.0
margin_bottom = 102.0
texture = SubResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentBoxCount" type="Label" parent="HUD"]
margin_left = 943.991
margin_top = 126.838
margin_right = 983.991
margin_bottom = 140.838
rect_scale = Vector2( 4.2353, 3.8605 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audio"]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource( 3 )
margin_left = 0.672699
margin_top = -1.7818
margin_right = 1023.67
margin_bottom = 596.218
color = Color( 0.992157, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="changed_box_power" from="Player" to="HUD" method="_on_Player_changed_box_power"]
[connection signal="cycled_box_type" from="Player" to="HUD" method="_on_Player_cycled_box_type"]
[connection signal="reset_level" from="Player" to="." method="reset_curr_level"]
[connection signal="spawn_box" from="Player" to="HUD" method="_on_Player_spawn_box"]
[connection signal="spawn_box" from="Player" to="." method="_on_Player_spawn_box"]
